@@ -8,6 +8,7 @@ procps-ng-NEXT
   * kill: report error if cannot kill process Debian #733172
   * watch: Add hostname to header
   * library: Find tty quicker Debian #770215
+  * watch,free: use locale-independent float Debian #692113
 
 procps-ng-3.3.11
 ----------------
